# vscode-rust-oi

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  IMPORT_PARSER.md  QUICKSTART.md
fixtures/: test-import-bug.rs
fixtures/expected/: edge_cases.expected.rs  other.expected.rs  simple.expected.rs  test_fixture.expected.rs  unused.expected.rs
fixtures/input/: aliasbug.rs  comprehensive.rs  edge_cases.rs  other.rs  simple.rs  unused.rs  uuid.rs
rust-test/: Cargo.toml  README.md  validate.sh
rust-test/src/: lib.rs  main.rs
rust-test/tests/: fixture_test.rs
scripts/: integration-test.sh  release.js
src/: autoImport.test.ts  autoImport.ts  cargoParser.test.ts  cargoParser.ts  cargoWorkspace.ts  cli.ts  extension.test.ts  extension.ts  fixture.test.ts  importParser copy.ts  importParser.test.ts  importParser.ts  stress.test.ts
