[package]
name = "rust-import-organizer-test"
version = "0.1.0"
edition = "2021"

[dependencies]
# Add all the crates referenced in your fixture
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
uuid = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
anyhow = "1.0"
thiserror = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio"] }

# For the json::json macro test
json = "0.12"

[dev-dependencies]
# Testing utilities
pretty_assertions = "1.4"

[[bin]]
name = "test-runner"
path = "src/main.rs"